fixedoverflowissue

--- a/src/viso/summary/SummaryView.css
+++ b/src/viso/summary/SummaryView.css
@@ -106,7 +106,7 @@
     transition: 0.33s;
     width: 90%;
     cursor: pointer;
-    overflow: hidden !important;
+    overflow: hidden;
   }
 }
 
@@ -115,6 +115,7 @@
     display: flex; 
     align-items: center;
     width: 90%;
+    overflow: hidden;
   }
 
   .summaryContent-nav{
